// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Asset /> should handle no query 1`] = `
.emotion-19 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-2 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus {
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true] {
  color: #808080;
}

.emotion-1 {
  width: 36px;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-11:hover,
.emotion-11.focus-visible:focus {
  color: #ffffff;
}

.emotion-11:hover svg,
.emotion-11.focus-visible:focus svg {
  opacity: 1;
}

.emotion-11[aria-disabled=true] {
  color: #808080;
}

.emotion-11:hover {
  background-color: #2e2e2e;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 0;
}

<div
  className="emotion-19"
>
  <div
    className="emotion-18"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-2"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="back.svg"
            height={20}
          />
        </a>
        <div>
          FatManOnABike1914.mp4
        </div>
        <div
          className="emotion-1"
        />
      </div>
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-4"
                >
                  <video
                    autoPlay={true}
                    className="emotion-3"
                    controls={true}
                    controlsList="nodownload"
                    disablePictureInPicture={true}
                  >
                    <source
                      src="https://storage.googleapis.com/video.mp4"
                      type="video/mp4"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="English"
                      src="/webvtt/english.vtt"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="French"
                      src="/webvtt/french.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-label-detection"
                      src="/webvtt/gcp-label-detection.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-object-detection"
                      src="/webvtt/gcp-object-detection.vtt"
                    />
                  </video>
                </div>
              </div>
              <MetadataCues
                videoRef={
                  Object {
                    "current": null,
                  }
                }
              />
            </div>
            <Timeline
              length={144.45}
              videoRef={
                Object {
                  "current": null,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <div
        className="emotion-16"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-11"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-11"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-11"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-11"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-15"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Asset /> should render properly 1`] = `
.emotion-15 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-2 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus {
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true] {
  color: #808080;
}

.emotion-1 {
  width: 36px;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
}

.emotion-3 {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover,
.emotion-7.focus-visible:focus {
  color: #ffffff;
}

.emotion-7:hover svg,
.emotion-7.focus-visible:focus svg {
  opacity: 1;
}

.emotion-7[aria-disabled=true] {
  color: #808080;
}

.emotion-7:hover {
  background-color: #2e2e2e;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-14"
  >
    <div
      className="emotion-6"
    >
      <div
        className="emotion-2"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=W3sidHlwZSI6ImZhY2V0IiwiYXR0cmlidXRlIjoibWVkaWEudHlwZSIsInZhbHVlcyI6eyJmYWNldHMiOlsidmlkZW8iXX19XQ=="
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="back.svg"
            height={20}
          />
        </a>
        <div>
          test_document.docx
        </div>
        <div
          className="emotion-1"
        />
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
        >
          <img
            alt="test_document.docx"
            className="emotion-3"
            src="https://storage.googleapis.com/image.jpeg"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div
        className="emotion-12"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-7"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-7"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-7"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-7"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-11"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Asset /> should render videos properly 1`] = `
.emotion-19 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-right: 1px;
}

.emotion-2 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  margin-bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus {
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true] {
  color: #808080;
}

.emotion-1 {
  width: 36px;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  overflow-y: hidden;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  margin-top: 1px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-11:hover,
.emotion-11.focus-visible:focus {
  color: #ffffff;
}

.emotion-11:hover svg,
.emotion-11.focus-visible:focus svg {
  opacity: 1;
}

.emotion-11[aria-disabled=true] {
  color: #808080;
}

.emotion-11:hover {
  background-color: #2e2e2e;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 0;
}

<div
  className="emotion-19"
>
  <div
    className="emotion-18"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-2"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=?assetId=srL8ob5cTpCJjYoKkqqfa2ciyG425dGi&query=W3sidHlwZSI6ImZhY2V0IiwiYXR0cmlidXRlIjoibWVkaWEudHlwZSIsInZhbHVlcyI6eyJmYWNldHMiOlsidmlkZW8iXX19XQ=="
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="back.svg"
            height={20}
          />
        </a>
        <div>
          FatManOnABike1914.mp4
        </div>
        <div
          className="emotion-1"
        />
      </div>
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-4"
                >
                  <video
                    autoPlay={true}
                    className="emotion-3"
                    controls={true}
                    controlsList="nodownload"
                    disablePictureInPicture={true}
                  >
                    <source
                      src="https://storage.googleapis.com/video.mp4"
                      type="video/mp4"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="English"
                      src="/webvtt/english.vtt"
                    />
                    <track
                      default={false}
                      kind="captions"
                      label="French"
                      src="/webvtt/french.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-label-detection"
                      src="/webvtt/gcp-label-detection.vtt"
                    />
                    <track
                      default={true}
                      kind="metadata"
                      label="gcp-object-detection"
                      src="/webvtt/gcp-object-detection.vtt"
                    />
                  </video>
                </div>
              </div>
              <MetadataCues
                videoRef={
                  Object {
                    "current": null,
                  }
                }
              />
            </div>
            <Timeline
              length={144.45}
              videoRef={
                Object {
                  "current": null,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <div
        className="emotion-16"
      >
        <button
          aria-label="Asset Metadata"
          className="emotion-11"
          onClick={[Function]}
          title="Asset Metadata"
          type="button"
        >
          <svg
            data-file-name="information.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Face Recognition Training"
          className="emotion-11"
          onClick={[Function]}
          title="Face Recognition Training"
          type="button"
        >
          <svg
            data-file-name="faceDetection.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Add Labels To Model"
          className="emotion-11"
          onClick={[Function]}
          title="Add Labels To Model"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <button
          aria-label="Delete"
          className="emotion-11"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="trash.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-15"
        />
      </div>
    </div>
  </div>
</div>
`;
